--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Lightrod is a meme.
+		    Lightningrod is a meme.
 	    </footer>
 	</body>
 </html>
